// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuestionDetail > should match snapshot after loading 1`] = `
<div>
  <section
    class="flex justify-between flex-wrap gap-2 items-center"
  >
    <!---->
    <button
      aria-pressed="false"
      class="text-md cursor-pointer rounded-md py-1 px-2 border border-gray-300 bg-white transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
      data-variant="default"
      role="button"
      tabindex="0"
    >
      <!---->
      <!---->
      <div
        class="flex items-center justify-between gap-2"
      >
        <div
          class="rotate-90"
        >
          <svg
            class="fill-neutral-600"
            height="1rem"
            role="img"
            viewBox="0 -960 960 960"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"
            />
            <!---->
          </svg>
          <!---->
        </div>
         
        <span
          class="text-sm"
        >
          Back to all questions
        </span>
      </div>
      
      
      
    </button>
    
    <!---->
     
    <div />
  </section>
   
  <section
    class="my-4"
  >
    <div
      class="bg-white"
    >
      <!---->
      <!---->
      <div
        class="h-full my-4 p-4 rounded-2xl border border-gray-200"
        data-testid="panel-component"
      >
        <article
          class="flex gap-2 items-start relative flex-col-reverse sm:flex-row"
        >
          <div
            class="mt-0.5 hidden sm:block"
          >
            <!---->
          </div>
           
          <div
            class="grow sm:flex justify-between items-start gap-4"
            data-testid="horizontal-container"
          >
            <p
              class="text-md leading-6"
            >
              <!---->
              <!---->
              Q1: Do you agree with the proposal to align the flavour categories of chocolate bars as outlined in the draft guidelines of the Chocolate Bar Regulation for the United Kingdom?
              
              
              <!---->
            </p>
             
            <div
              class="text-sm leading-6 whitespace-nowrap"
            >
              100 responses
            </div>
             
            <!---->
            <!---->
          </div>
           
          <div
            class="-ml-2 sm:ml-0 -mt-0.5"
          >
            <div
              class="flex items-center gap-1"
            >
              <!---->
               
              <div
                data-testid="fav-button"
              >
                <div>
                  <!---->
                  <button
                    aria-pressed="false"
                    class="text-md cursor-pointer rounded-md py-1 px-2 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                    data-variant="ghost"
                    role="button"
                    tabindex="0"
                  >
                    <!---->
                    <!---->
                    <svg
                      class="fill-gray-500"
                      height="1.3rem"
                      role="img"
                      viewBox="0 -960 960 960"
                      width="1.3rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <!---->
                      <path
                        d="m354-287 126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM233-120l65-281L80-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-350Z"
                      />
                      
                      <!---->
                    </svg>
                    
                    
                    
                  </button>
                  
                  <!---->
                </div>
              </div>
            </div>
            <!---->
          </div>
        </article>
        <!---->
      </div>
      
      
      <!---->
    </div>
    <!---->
  </section>
  <!---->
   
  <div
    class="flex flex-col overflow-hidden"
    data-melt-tabs=""
    data-orientation="horizontal"
  >
    <div
      class="flex justify-center items-center gap-4 flex-wrap-reverse gap-y-2"
    >
      <div>
        <!---->
      </div>
       
      <div
        aria-label="Question details"
        aria-orientation="horizontal"
        class="flex items-center overflow-x-auto rounded-2xl bg-neutral-200"
        data-melt-tabs-list=""
        data-orientation="horizontal"
        role="tablist"
      >
        <!---->
        <!---->
         
        <!---->
        <button
          class="flex items-center justify-between gap-1 m-1 py-1 px-2 text-sm rounded-2xl trigger relative transition-colors duration-300 cursor-pointer bg-white hover:bg-neutral-100"
          data-melt-tabs-trigger=""
          data-orientation="horizontal"
          data-state="active"
          data-value="tab-question-summary"
          role="tab"
          tabindex="0"
          type="button"
        >
          <div
            class="shrink-0"
          >
            <svg
              class="fill-neutral-500"
              height="1rem"
              role="img"
              viewBox="0 -960 960 960"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <!---->
              <path
                d="M120-80v-280h120v-160h200v-80H320v-280h320v280H520v80h200v160h120v280H520v-280h120v-80H320v80h120v280H120Zm280-600h160v-120H400v120ZM200-160h160v-120H200v120Zm400 0h160v-120H600v120ZM480-680ZM360-280Zm240 0Z"
                xmlns="http://www.w3.org/2000/svg"
              />
              
              <!---->
            </svg>
            <!---->
          </div>
          <!---->
           Question Summary
        </button>
        
        <!---->
        <button
          class="flex items-center justify-between gap-1 m-1 py-1 px-2 text-sm rounded-2xl trigger relative transition-colors duration-300 cursor-pointer hover:bg-neutral-100"
          data-melt-tabs-trigger=""
          data-orientation="horizontal"
          data-state="inactive"
          data-value="tab-response-analysis"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <div
            class="shrink-0"
          >
            <svg
              class="fill-neutral-500"
              height="1rem"
              role="img"
              viewBox="0 -960 960 960"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <!---->
              <path
                d="M200-120q-33 0-56.5-23.5T120-200v-640h80v640h640v80H200Zm40-120v-360h160v360H240Zm200 0v-560h160v560H440Zm200 0v-200h160v200H640Z"
                xmlns="http://www.w3.org/2000/svg"
              />
              
              <!---->
            </svg>
            <!---->
          </div>
          <!---->
           Response Analysis
        </button>
        
        <!---->
        <!---->
      </div>
    </div>
     
    <div>
      <!---->
      <div
        class="grid grid-cols-4 gap-4"
      >
        <div
          class="col-span-4 md:col-span-1"
        >
          <aside>
            <div
              class="h-full my-4 p-4 rounded-2xl border border-gray-200"
              data-testid="panel-component"
            >
              <!---->
              <div
                class="flex gap-4"
              >
                <div
                  class="flex items-center justify-center"
                >
                  <div
                    class="bg-pink-50 p-2 rounded-md mt-1.5"
                  >
                    <svg
                      class="fill-pink-700"
                      height="1.3rem"
                      role="img"
                      viewBox="0 -960 960 960"
                      width="1.3rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <!---->
                      <path
                        d="M440-160q-17 0-28.5-11.5T400-200v-240L168-736q-15-20-4.5-42t36.5-22h560q26 0 36.5 22t-4.5 42L560-440v240q0 17-11.5 28.5T520-160h-80Zm40-308 198-252H282l198 252Zm0 0Z"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      
                      <!---->
                    </svg>
                    <!---->
                  </div>
                </div>
                <!---->
                 
                <div
                  class="grow"
                >
                  <!---->
                  <h2
                    class="text-neutral-700 text-lg"
                    style=""
                  >
                    <!---->
                    Filters
                    
                    
                  </h2>
                  
                  <!---->
                   
                  <!---->
                </div>
                 
                <!---->
              </div>
              <!---->
               
              <!---->
               
              <!---->
               
              <div>
                <section>
                  <div
                    class="h-full my-4 p-2 rounded-2xl border border-gray-200"
                    data-testid="panel-component"
                  >
                    <!---->
                    <h3
                      class="blink w-max select-none bg-neutral-100 text-neutral-100"
                    >
                      skeleton
                    </h3>
                    <!---->
                     
                    <div
                      class="my-1"
                    >
                      <div
                        class="demo-filter relative w-full pb-3"
                      >
                        <div
                          class="mb-1 grid grid-cols-3 gap-1"
                        >
                          <span
                            class="blink select-none bg-neutral-100 text-left text-neutral-100"
                          >
                            skeleton
                          </span>
                           
                          <span
                            class="blink select-none bg-neutral-100 text-right text-neutral-100"
                          >
                            000%
                          </span>
                           
                          <span
                            class="blink select-none bg-neutral-100 text-right text-neutral-100"
                          >
                            00000
                          </span>
                        </div>
                         
                        <div
                          class="blink w-full select-none bg-neutral-100 text-neutral-100"
                        >
                          __________
                        </div>
                      </div>
                    </div>
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </section>
                <section>
                  <div
                    class="h-full my-4 p-2 rounded-2xl border border-gray-200"
                    data-testid="panel-component"
                  >
                    <!---->
                    <h3
                      class="blink w-max select-none bg-neutral-100 text-neutral-100"
                    >
                      skeleton
                    </h3>
                    <!---->
                     
                    <div
                      class="my-1"
                    >
                      <div
                        class="demo-filter relative w-full pb-3"
                      >
                        <div
                          class="mb-1 grid grid-cols-3 gap-1"
                        >
                          <span
                            class="blink select-none bg-neutral-100 text-left text-neutral-100"
                          >
                            skeleton
                          </span>
                           
                          <span
                            class="blink select-none bg-neutral-100 text-right text-neutral-100"
                          >
                            000%
                          </span>
                           
                          <span
                            class="blink select-none bg-neutral-100 text-right text-neutral-100"
                          >
                            00000
                          </span>
                        </div>
                         
                        <div
                          class="blink w-full select-none bg-neutral-100 text-neutral-100"
                        >
                          __________
                        </div>
                      </div>
                    </div>
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </section>
                <section>
                  <div
                    class="h-full my-4 p-2 rounded-2xl border border-gray-200"
                    data-testid="panel-component"
                  >
                    <!---->
                    <h3
                      class="blink w-max select-none bg-neutral-100 text-neutral-100"
                    >
                      skeleton
                    </h3>
                    <!---->
                     
                    <div
                      class="my-1"
                    >
                      <div
                        class="demo-filter relative w-full pb-3"
                      >
                        <div
                          class="mb-1 grid grid-cols-3 gap-1"
                        >
                          <span
                            class="blink select-none bg-neutral-100 text-left text-neutral-100"
                          >
                            skeleton
                          </span>
                           
                          <span
                            class="blink select-none bg-neutral-100 text-right text-neutral-100"
                          >
                            000%
                          </span>
                           
                          <span
                            class="blink select-none bg-neutral-100 text-right text-neutral-100"
                          >
                            00000
                          </span>
                        </div>
                         
                        <div
                          class="blink w-full select-none bg-neutral-100 text-neutral-100"
                        >
                          __________
                        </div>
                      </div>
                    </div>
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </section>
                
              </div>
              <!---->
              <!---->
            </div>
            <!---->
          </aside>
          <!---->
        </div>
         
        <div
          class="col-span-4 md:col-span-3"
        >
          <!---->
          <section
            class="my-4"
          >
            <div
              class="h-full my-4 p-4 rounded-2xl border border-gray-200"
              data-testid="panel-component"
            >
              <!---->
              <div
                class="flex gap-4"
              >
                <div
                  class="flex items-center justify-center"
                >
                  <div
                    class="bg-pink-50 p-2 rounded-md mt-1.5"
                  >
                    <svg
                      class="fill-pink-700"
                      height="1.3rem"
                      role="img"
                      viewBox="0 -960 960 960"
                      width="1.3rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <!---->
                      <path
                        d="M280-600v-80h560v80H280Zm0 160v-80h560v80H280Zm0 160v-80h560v80H280ZM160-600q-17 0-28.5-11.5T120-640q0-17 11.5-28.5T160-680q17 0 28.5 11.5T200-640q0 17-11.5 28.5T160-600Zm0 160q-17 0-28.5-11.5T120-480q0-17 11.5-28.5T160-520q17 0 28.5 11.5T200-480q0 17-11.5 28.5T160-440Zm0 160q-17 0-28.5-11.5T120-320q0-17 11.5-28.5T160-360q17 0 28.5 11.5T200-320q0 17-11.5 28.5T160-280Z"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      
                      <!---->
                    </svg>
                    <!---->
                  </div>
                </div>
                <!---->
                 
                <div
                  class="grow"
                >
                  <!---->
                  <h2
                    class="text-neutral-700 text-lg"
                    style=""
                  >
                    <!---->
                    Multiple Choice Answers
                    
                    
                  </h2>
                  
                  <!---->
                   
                  <!---->
                </div>
                 
                <!---->
              </div>
              <!---->
               
              <div
                class="h-full my-4 p-4 rounded-2xl border border-gray-200 bg-neutral-50"
                data-testid="panel-component"
              >
                <!---->
                <div
                  class="mb-1 last:mb-0"
                >
                  <!---->
                  <button
                    aria-pressed="false"
                    class="w-full text-xs cursor-pointer rounded-md py-0.5 px-1 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                    data-variant="ghost"
                    role="button"
                    tabindex="0"
                  >
                    <!---->
                    <!---->
                    <div
                      class="flex items-center justify-between gap-1 text-xs mb-4 last:mb-0 w-full p-1"
                    >
                      <h3
                        class="w-1/2 text-left"
                      >
                        Yes
                      </h3>
                       
                      <div
                        class="flex flex-col justify-center items-center gap-1 w-2/3 sm:flex-row sm:w-1/2 sm:gap-4"
                      >
                        <div
                          class="flex justify-between items-center w-full sm:justify-end"
                        >
                          <span>
                            42.7%
                          </span>
                           
                          <span
                            class="sm:hidden"
                          >
                            99
                          </span>
                        </div>
                         
                        <div
                          class="w-full"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="0"
                            aria-valuenow="42.7"
                            class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300"
                            data-max="100"
                            data-melt-progress=""
                            data-state="loading"
                            data-value="42.7"
                            max="100"
                            role="meter"
                          >
                            <div
                              class="h-full w-full bg-primary transition-transform duration-[660ms] ease-[cubic-bezier(0.65,0,0.35,1)]"
                              style="transform: translateX(-57.3%); transition-delay: 0ms; transition-duration: 0ms;"
                            />
                          </div>
                          <!---->
                        </div>
                         
                        <span
                          class="hidden min-w-[4ch] sm:block"
                        >
                          99
                        </span>
                      </div>
                    </div>
                    
                    
                    
                  </button>
                  
                  <!---->
                </div>
                <div
                  class="mb-1 last:mb-0"
                >
                  <!---->
                  <button
                    aria-pressed="false"
                    class="w-full text-xs cursor-pointer rounded-md py-0.5 px-1 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                    data-variant="ghost"
                    role="button"
                    tabindex="0"
                  >
                    <!---->
                    <!---->
                    <div
                      class="flex items-center justify-between gap-1 text-xs mb-4 last:mb-0 w-full p-1"
                    >
                      <h3
                        class="w-1/2 text-left"
                      >
                        No
                      </h3>
                       
                      <div
                        class="flex flex-col justify-center items-center gap-1 w-2/3 sm:flex-row sm:w-1/2 sm:gap-4"
                      >
                        <div
                          class="flex justify-between items-center w-full sm:justify-end"
                        >
                          <span>
                            7.8%
                          </span>
                           
                          <span
                            class="sm:hidden"
                          >
                            18
                          </span>
                        </div>
                         
                        <div
                          class="w-full"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="0"
                            aria-valuenow="7.8"
                            class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300"
                            data-max="100"
                            data-melt-progress=""
                            data-state="loading"
                            data-value="7.8"
                            max="100"
                            role="meter"
                          >
                            <div
                              class="h-full w-full bg-primary transition-transform duration-[660ms] ease-[cubic-bezier(0.65,0,0.35,1)]"
                              style="transform: translateX(-92.2%); transition-delay: 0ms; transition-duration: 0ms;"
                            />
                          </div>
                          <!---->
                        </div>
                         
                        <span
                          class="hidden min-w-[4ch] sm:block"
                        >
                          18
                        </span>
                      </div>
                    </div>
                    
                    
                    
                  </button>
                  
                  <!---->
                </div>
                <div
                  class="mb-1 last:mb-0"
                >
                  <!---->
                  <button
                    aria-pressed="false"
                    class="w-full text-xs cursor-pointer rounded-md py-0.5 px-1 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                    data-variant="ghost"
                    role="button"
                    tabindex="0"
                  >
                    <!---->
                    <!---->
                    <div
                      class="flex items-center justify-between gap-1 text-xs mb-4 last:mb-0 w-full p-1"
                    >
                      <h3
                        class="w-1/2 text-left"
                      >
                        Don't know
                      </h3>
                       
                      <div
                        class="flex flex-col justify-center items-center gap-1 w-2/3 sm:flex-row sm:w-1/2 sm:gap-4"
                      >
                        <div
                          class="flex justify-between items-center w-full sm:justify-end"
                        >
                          <span>
                            42.2%
                          </span>
                           
                          <span
                            class="sm:hidden"
                          >
                            98
                          </span>
                        </div>
                         
                        <div
                          class="w-full"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="0"
                            aria-valuenow="42.2"
                            class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300"
                            data-max="100"
                            data-melt-progress=""
                            data-state="loading"
                            data-value="42.2"
                            max="100"
                            role="meter"
                          >
                            <div
                              class="h-full w-full bg-primary transition-transform duration-[660ms] ease-[cubic-bezier(0.65,0,0.35,1)]"
                              style="transform: translateX(-57.8%); transition-delay: 0ms; transition-duration: 0ms;"
                            />
                          </div>
                          <!---->
                        </div>
                         
                        <span
                          class="hidden min-w-[4ch] sm:block"
                        >
                          98
                        </span>
                      </div>
                    </div>
                    
                    
                    
                  </button>
                  
                  <!---->
                </div>
                <div
                  class="mb-1 last:mb-0"
                >
                  <!---->
                  <button
                    aria-pressed="false"
                    class="w-full text-xs cursor-pointer rounded-md py-0.5 px-1 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                    data-variant="ghost"
                    role="button"
                    tabindex="0"
                  >
                    <!---->
                    <!---->
                    <div
                      class="flex items-center justify-between gap-1 text-xs mb-4 last:mb-0 w-full p-1"
                    >
                      <h3
                        class="w-1/2 text-left"
                      >
                        No answer
                      </h3>
                       
                      <div
                        class="flex flex-col justify-center items-center gap-1 w-2/3 sm:flex-row sm:w-1/2 sm:gap-4"
                      >
                        <div
                          class="flex justify-between items-center w-full sm:justify-end"
                        >
                          <span>
                            7.3%
                          </span>
                           
                          <span
                            class="sm:hidden"
                          >
                            17
                          </span>
                        </div>
                         
                        <div
                          class="w-full"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="0"
                            aria-valuenow="7.3"
                            class="relative h-2 w-full overflow-hidden rounded-[99999px] bg-neutral-300"
                            data-max="100"
                            data-melt-progress=""
                            data-state="loading"
                            data-value="7.3"
                            max="100"
                            role="meter"
                          >
                            <div
                              class="h-full w-full bg-primary transition-transform duration-[660ms] ease-[cubic-bezier(0.65,0,0.35,1)]"
                              style="transform: translateX(-92.7%); transition-delay: 0ms; transition-duration: 0ms;"
                            />
                          </div>
                          <!---->
                        </div>
                         
                        <span
                          class="hidden min-w-[4ch] sm:block"
                        >
                          17
                        </span>
                      </div>
                    </div>
                    
                    
                    
                  </button>
                  
                  <!---->
                </div>
                
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <!---->
          </section>
          
          <!---->
           
          <!---->
          <section
            class="my-4"
          >
            <div
              class="h-full my-4 p-4 rounded-2xl border border-gray-200"
              data-testid="panel-component"
            >
              <!---->
              <div
                class="flex gap-4"
              >
                <div
                  class="flex items-center justify-center"
                >
                  <div
                    class="bg-pink-50 p-2 rounded-md"
                  >
                    <svg
                      class="fill-pink-700"
                      height="1.3rem"
                      role="img"
                      viewBox="0 -960 960 960"
                      width="1.3rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <!---->
                      <path
                        d="M120-80v-280h120v-160h200v-80H320v-280h320v280H520v80h200v160h120v280H520v-280h120v-80H320v80h120v280H120Zm280-600h160v-120H400v120ZM200-160h160v-120H200v120Zm400 0h160v-120H600v120ZM480-680ZM360-280Zm240 0Z"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      
                      <!---->
                    </svg>
                    <!---->
                  </div>
                </div>
                <!---->
                 
                <div
                  class="grow"
                >
                  <!---->
                  <h2
                    class="text-neutral-700 text-lg"
                    style=""
                  >
                    <!---->
                    Theme analysis
                    
                    
                  </h2>
                  
                  <!---->
                   
                  <p
                    class="text-neutral-600 text-sm"
                  >
                    Analysis of key themes mentioned in responses to this question.
                  </p>
                  <!---->
                </div>
                 
                <div>
                  <div
                    slot="aside"
                  >
                    <a
                      aria-label="Download themes as CSV"
                      data-testid="csv-download"
                      download="theme_mentions_for_.csv"
                      href="data:text/csv;base64,"
                      title="Download themes as CSV"
                    >
                      <!---->
                      <button
                        aria-pressed="false"
                        class="text-sm cursor-pointer rounded-md py-1 px-2 border border-gray-300 bg-white transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                        data-variant="default"
                        role="button"
                        tabindex="0"
                      >
                        <!---->
                        <!---->
                        <!---->
                        <svg
                          class="fill-neutral-700"
                          height="1rem"
                          role="img"
                          viewBox="0 -960 960 960"
                          width="1rem"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z"
                          />
                          <!---->
                        </svg>
                        <!---->
                         
                        <span
                          class="text-xs text-neutral-700"
                        >
                          Export
                        </span>
                        
                        
                        
                      </button>
                      
                      <!---->
                    </a>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
               
              <!---->
               
              <!---->
               
              <div
                class="h-full my-4 p-4 rounded-2xl border border-gray-200"
                data-testid="panel-component"
              >
                <div
                  class="w-full overflow-auto"
                >
                  <table
                    class="text-md w-full"
                  >
                    <thead
                      class="text-sm"
                    >
                      <tr>
                        <th
                          class="text-md m-2 pr-4 text-left font-normal"
                        >
                          Theme
                        </th>
                        <th
                          class="text-md m-2 pr-4 text-left font-normal"
                        >
                          Mentions
                        </th>
                        <th
                          class="text-md m-2 pr-4 text-left font-normal"
                        >
                          % Percentage
                        </th>
                        
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="text-xs border-y border-neutral-300 py-2 transition-colors duration-300"
                      >
                        <td
                          class="pr-4"
                        >
                          <div
                            class="p-2"
                          >
                            <h3
                              class="blink mb-2 w-max select-none bg-neutral-100 text-sm font-bold text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON 
                            </h3>
                             
                            <p
                              class="blink select-none bg-neutral-100 text-sm text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON SKELETON SKELETON 
                            </p>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8"
                          >
                            <span
                              class="blink select-none bg-neutral-100 text-neutral-100"
                            >
                              000 SKELETON
                            </span>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8 flex items-center gap-1"
                          >
                            <span
                              class="blink w-[5ch] select-none bg-neutral-100 text-neutral-100"
                            >
                              000%
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="text-xs border-y border-neutral-300 py-2 transition-colors duration-300"
                      >
                        <td
                          class="pr-4"
                        >
                          <div
                            class="p-2"
                          >
                            <h3
                              class="blink mb-2 w-max select-none bg-neutral-100 text-sm font-bold text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON 
                            </h3>
                             
                            <p
                              class="blink select-none bg-neutral-100 text-sm text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON SKELETON SKELETON 
                            </p>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8"
                          >
                            <span
                              class="blink select-none bg-neutral-100 text-neutral-100"
                            >
                              000 SKELETON
                            </span>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8 flex items-center gap-1"
                          >
                            <span
                              class="blink w-[5ch] select-none bg-neutral-100 text-neutral-100"
                            >
                              000%
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="text-xs border-y border-neutral-300 py-2 transition-colors duration-300"
                      >
                        <td
                          class="pr-4"
                        >
                          <div
                            class="p-2"
                          >
                            <h3
                              class="blink mb-2 w-max select-none bg-neutral-100 text-sm font-bold text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON 
                            </h3>
                             
                            <p
                              class="blink select-none bg-neutral-100 text-sm text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON SKELETON SKELETON 
                            </p>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8"
                          >
                            <span
                              class="blink select-none bg-neutral-100 text-neutral-100"
                            >
                              000 SKELETON
                            </span>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8 flex items-center gap-1"
                          >
                            <span
                              class="blink w-[5ch] select-none bg-neutral-100 text-neutral-100"
                            >
                              000%
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="text-xs border-y border-neutral-300 py-2 transition-colors duration-300"
                      >
                        <td
                          class="pr-4"
                        >
                          <div
                            class="p-2"
                          >
                            <h3
                              class="blink mb-2 w-max select-none bg-neutral-100 text-sm font-bold text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON 
                            </h3>
                             
                            <p
                              class="blink select-none bg-neutral-100 text-sm text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON SKELETON SKELETON 
                            </p>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8"
                          >
                            <span
                              class="blink select-none bg-neutral-100 text-neutral-100"
                            >
                              000 SKELETON
                            </span>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8 flex items-center gap-1"
                          >
                            <span
                              class="blink w-[5ch] select-none bg-neutral-100 text-neutral-100"
                            >
                              000%
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="text-xs border-y border-neutral-300 py-2 transition-colors duration-300"
                      >
                        <td
                          class="pr-4"
                        >
                          <div
                            class="p-2"
                          >
                            <h3
                              class="blink mb-2 w-max select-none bg-neutral-100 text-sm font-bold text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON 
                            </h3>
                             
                            <p
                              class="blink select-none bg-neutral-100 text-sm text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON SKELETON SKELETON 
                            </p>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8"
                          >
                            <span
                              class="blink select-none bg-neutral-100 text-neutral-100"
                            >
                              000 SKELETON
                            </span>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8 flex items-center gap-1"
                          >
                            <span
                              class="blink w-[5ch] select-none bg-neutral-100 text-neutral-100"
                            >
                              000%
                            </span>
                          </div>
                        </td>
                      </tr>
                      
                    </tbody>
                    <!---->
                  </table>
                </div>
                <!---->
              </div>
              <!---->
               
              <div
                class="flex flex-wrap items-center justify-between gap-y-4"
              >
                <small>
                  Showing 0 themes • Click rows to select themes for response analysis
                </small>
                 
                <div
                  class="flex items-center gap-1"
                >
                  <small>
                    Order:
                  </small>
                   
                  <!---->
                  <button
                    aria-pressed="true"
                    class="text-xs cursor-pointer rounded-md py-0.5 px-1 border border-gray-300 bg-white transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 !bg-neutral-800 text-white hover:bg-neutral-700 svelte-1d0mdzt"
                    data-variant="default"
                    role="button"
                    tabindex="0"
                  >
                    <!---->
                    <!---->
                    High to Low
                    
                    
                    
                  </button>
                  
                  <!---->
                   
                  <!---->
                  <button
                    aria-pressed="false"
                    class="text-xs cursor-pointer rounded-md py-0.5 px-1 border border-gray-300 bg-white transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                    data-variant="default"
                    role="button"
                    tabindex="0"
                  >
                    <!---->
                    <!---->
                    Low to High
                    
                    
                    
                  </button>
                  
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            <!---->
          </section>
          
          <!---->
        </div>
      </div>
      
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`QuestionDetail > should match snapshot initially 1`] = `
<div>
  <section
    class="flex justify-between flex-wrap gap-2 items-center"
  >
    <!---->
    <button
      aria-pressed="false"
      class="text-md cursor-pointer rounded-md py-1 px-2 border border-gray-300 bg-white transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
      data-variant="default"
      role="button"
      tabindex="0"
    >
      <!---->
      <!---->
      <div
        class="flex items-center justify-between gap-2"
      >
        <div
          class="rotate-90"
        >
          <svg
            class="fill-neutral-600"
            height="1rem"
            role="img"
            viewBox="0 -960 960 960"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"
            />
            <!---->
          </svg>
          <!---->
        </div>
         
        <span
          class="text-sm"
        >
          Back to all questions
        </span>
      </div>
      
      
      
    </button>
    
    <!---->
     
    <div />
  </section>
   
  <section
    class="my-4"
  >
    <div
      class="bg-white"
    >
      <!---->
      <!---->
      <div
        class="h-full my-4 p-4 rounded-2xl border border-gray-200"
        data-testid="panel-component"
      >
        <article
          class="flex gap-2 items-start relative flex-col-reverse sm:flex-row"
        >
          <div
            class="mt-0.5 hidden sm:block"
          >
            <!---->
          </div>
           
          <div
            class="grow sm:flex justify-between items-start gap-4"
            data-testid="horizontal-container"
          >
            <p
              class="text-md transition-colors duration-1000 select-none bg-neutral-100 text-neutral-100 blink"
            >
              SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON SKELETON 
            </p>
             
            <div
              class="text-sm mt-2 transition-colors duration-1000 w-max select-none bg-neutral-100 text-neutral-100 blink"
            >
              000 responses
            </div>
            <!---->
          </div>
           
          <div
            class="-ml-2 sm:ml-0 -mt-0.5"
          >
            <!---->
          </div>
        </article>
        <!---->
      </div>
      
      
      <!---->
    </div>
    <!---->
  </section>
  <!---->
   
  <div
    class="flex flex-col overflow-hidden"
    data-melt-tabs=""
    data-orientation="horizontal"
  >
    <div
      class="flex justify-center items-center gap-4 flex-wrap-reverse gap-y-2"
    >
      <div>
        <!---->
      </div>
       
      <div
        aria-label="Question details"
        aria-orientation="horizontal"
        class="flex items-center overflow-x-auto rounded-2xl bg-neutral-200"
        data-melt-tabs-list=""
        data-orientation="horizontal"
        role="tablist"
      >
        <!---->
        <!---->
         
        <!---->
        <button
          class="flex items-center justify-between gap-1 m-1 py-1 px-2 text-sm rounded-2xl trigger relative transition-colors duration-300 cursor-pointer bg-white hover:bg-neutral-100"
          data-melt-tabs-trigger=""
          data-orientation="horizontal"
          data-state="active"
          data-value="tab-question-summary"
          role="tab"
          tabindex="0"
          type="button"
        >
          <div
            class="shrink-0"
          >
            <svg
              class="fill-neutral-500"
              height="1rem"
              role="img"
              viewBox="0 -960 960 960"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <!---->
              <path
                d="M120-80v-280h120v-160h200v-80H320v-280h320v280H520v80h200v160h120v280H520v-280h120v-80H320v80h120v280H120Zm280-600h160v-120H400v120ZM200-160h160v-120H200v120Zm400 0h160v-120H600v120ZM480-680ZM360-280Zm240 0Z"
                xmlns="http://www.w3.org/2000/svg"
              />
              
              <!---->
            </svg>
            <!---->
          </div>
          <!---->
           Question Summary
        </button>
        
        <!---->
        <!---->
      </div>
    </div>
     
    <div>
      <!---->
      <div
        class="grid grid-cols-4 gap-4"
      >
        <div
          class="col-span-4 md:col-span-1"
        >
          <aside>
            <div
              class="h-full my-4 p-4 rounded-2xl border border-gray-200"
              data-testid="panel-component"
            >
              <!---->
              <div
                class="flex gap-4"
              >
                <div
                  class="flex items-center justify-center"
                >
                  <div
                    class="bg-pink-50 p-2 rounded-md mt-1.5"
                  >
                    <svg
                      class="fill-pink-700"
                      height="1.3rem"
                      role="img"
                      viewBox="0 -960 960 960"
                      width="1.3rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <!---->
                      <path
                        d="M440-160q-17 0-28.5-11.5T400-200v-240L168-736q-15-20-4.5-42t36.5-22h560q26 0 36.5 22t-4.5 42L560-440v240q0 17-11.5 28.5T520-160h-80Zm40-308 198-252H282l198 252Zm0 0Z"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      
                      <!---->
                    </svg>
                    <!---->
                  </div>
                </div>
                <!---->
                 
                <div
                  class="grow"
                >
                  <!---->
                  <h2
                    class="text-neutral-700 text-lg"
                    style=""
                  >
                    <!---->
                    Filters
                    
                    
                  </h2>
                  
                  <!---->
                   
                  <!---->
                </div>
                 
                <!---->
              </div>
              <!---->
               
              <!---->
               
              <!---->
               
              <div>
                <section>
                  <div
                    class="h-full my-4 p-2 rounded-2xl border border-gray-200"
                    data-testid="panel-component"
                  >
                    <!---->
                    <h3
                      class="blink w-max select-none bg-neutral-100 text-neutral-100"
                    >
                      skeleton
                    </h3>
                    <!---->
                     
                    <div
                      class="my-1"
                    >
                      <div
                        class="demo-filter relative w-full pb-3"
                      >
                        <div
                          class="mb-1 grid grid-cols-3 gap-1"
                        >
                          <span
                            class="blink select-none bg-neutral-100 text-left text-neutral-100"
                          >
                            skeleton
                          </span>
                           
                          <span
                            class="blink select-none bg-neutral-100 text-right text-neutral-100"
                          >
                            000%
                          </span>
                           
                          <span
                            class="blink select-none bg-neutral-100 text-right text-neutral-100"
                          >
                            00000
                          </span>
                        </div>
                         
                        <div
                          class="blink w-full select-none bg-neutral-100 text-neutral-100"
                        >
                          __________
                        </div>
                      </div>
                    </div>
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </section>
                <section>
                  <div
                    class="h-full my-4 p-2 rounded-2xl border border-gray-200"
                    data-testid="panel-component"
                  >
                    <!---->
                    <h3
                      class="blink w-max select-none bg-neutral-100 text-neutral-100"
                    >
                      skeleton
                    </h3>
                    <!---->
                     
                    <div
                      class="my-1"
                    >
                      <div
                        class="demo-filter relative w-full pb-3"
                      >
                        <div
                          class="mb-1 grid grid-cols-3 gap-1"
                        >
                          <span
                            class="blink select-none bg-neutral-100 text-left text-neutral-100"
                          >
                            skeleton
                          </span>
                           
                          <span
                            class="blink select-none bg-neutral-100 text-right text-neutral-100"
                          >
                            000%
                          </span>
                           
                          <span
                            class="blink select-none bg-neutral-100 text-right text-neutral-100"
                          >
                            00000
                          </span>
                        </div>
                         
                        <div
                          class="blink w-full select-none bg-neutral-100 text-neutral-100"
                        >
                          __________
                        </div>
                      </div>
                    </div>
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </section>
                <section>
                  <div
                    class="h-full my-4 p-2 rounded-2xl border border-gray-200"
                    data-testid="panel-component"
                  >
                    <!---->
                    <h3
                      class="blink w-max select-none bg-neutral-100 text-neutral-100"
                    >
                      skeleton
                    </h3>
                    <!---->
                     
                    <div
                      class="my-1"
                    >
                      <div
                        class="demo-filter relative w-full pb-3"
                      >
                        <div
                          class="mb-1 grid grid-cols-3 gap-1"
                        >
                          <span
                            class="blink select-none bg-neutral-100 text-left text-neutral-100"
                          >
                            skeleton
                          </span>
                           
                          <span
                            class="blink select-none bg-neutral-100 text-right text-neutral-100"
                          >
                            000%
                          </span>
                           
                          <span
                            class="blink select-none bg-neutral-100 text-right text-neutral-100"
                          >
                            00000
                          </span>
                        </div>
                         
                        <div
                          class="blink w-full select-none bg-neutral-100 text-neutral-100"
                        >
                          __________
                        </div>
                      </div>
                    </div>
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </section>
                
              </div>
              <!---->
              <!---->
            </div>
            <!---->
          </aside>
          <!---->
        </div>
         
        <div
          class="col-span-4 md:col-span-3"
        >
          <!---->
          
          <!---->
           
          <!---->
          <section
            class="my-4"
          >
            <div
              class="h-full my-4 p-4 rounded-2xl border border-gray-200"
              data-testid="panel-component"
            >
              <!---->
              <div
                class="flex gap-4"
              >
                <div
                  class="flex items-center justify-center"
                >
                  <div
                    class="bg-pink-50 p-2 rounded-md"
                  >
                    <svg
                      class="fill-pink-700"
                      height="1.3rem"
                      role="img"
                      viewBox="0 -960 960 960"
                      width="1.3rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <!---->
                      <path
                        d="M120-80v-280h120v-160h200v-80H320v-280h320v280H520v80h200v160h120v280H520v-280h120v-80H320v80h120v280H120Zm280-600h160v-120H400v120ZM200-160h160v-120H200v120Zm400 0h160v-120H600v120ZM480-680ZM360-280Zm240 0Z"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      
                      <!---->
                    </svg>
                    <!---->
                  </div>
                </div>
                <!---->
                 
                <div
                  class="grow"
                >
                  <!---->
                  <h2
                    class="text-neutral-700 text-lg"
                    style=""
                  >
                    <!---->
                    Theme analysis
                    
                    
                  </h2>
                  
                  <!---->
                   
                  <p
                    class="text-neutral-600 text-sm"
                  >
                    Analysis of key themes mentioned in responses to this question.
                  </p>
                  <!---->
                </div>
                 
                <div>
                  <div
                    slot="aside"
                  >
                    <a
                      aria-label="Download themes as CSV"
                      data-testid="csv-download"
                      download="theme_mentions_for_.csv"
                      href="data:text/csv;base64,"
                      title="Download themes as CSV"
                    >
                      <!---->
                      <button
                        aria-pressed="false"
                        class="text-sm cursor-pointer rounded-md py-1 px-2 border border-gray-300 bg-white transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                        data-variant="default"
                        role="button"
                        tabindex="0"
                      >
                        <!---->
                        <!---->
                        <!---->
                        <svg
                          class="fill-neutral-700"
                          height="1rem"
                          role="img"
                          viewBox="0 -960 960 960"
                          width="1rem"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z"
                          />
                          <!---->
                        </svg>
                        <!---->
                         
                        <span
                          class="text-xs text-neutral-700"
                        >
                          Export
                        </span>
                        
                        
                        
                      </button>
                      
                      <!---->
                    </a>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
               
              <!---->
               
              <!---->
               
              <div
                class="h-full my-4 p-4 rounded-2xl border border-gray-200"
                data-testid="panel-component"
              >
                <div
                  class="w-full overflow-auto"
                >
                  <table
                    class="text-md w-full"
                  >
                    <thead
                      class="text-sm"
                    >
                      <tr>
                        <th
                          class="text-md m-2 pr-4 text-left font-normal"
                        >
                          Theme
                        </th>
                        <th
                          class="text-md m-2 pr-4 text-left font-normal"
                        >
                          Mentions
                        </th>
                        <th
                          class="text-md m-2 pr-4 text-left font-normal"
                        >
                          % Percentage
                        </th>
                        
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="text-xs border-y border-neutral-300 py-2 transition-colors duration-300"
                      >
                        <td
                          class="pr-4"
                        >
                          <div
                            class="p-2"
                          >
                            <h3
                              class="blink mb-2 w-max select-none bg-neutral-100 text-sm font-bold text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON 
                            </h3>
                             
                            <p
                              class="blink select-none bg-neutral-100 text-sm text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON SKELETON SKELETON 
                            </p>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8"
                          >
                            <span
                              class="blink select-none bg-neutral-100 text-neutral-100"
                            >
                              000 SKELETON
                            </span>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8 flex items-center gap-1"
                          >
                            <span
                              class="blink w-[5ch] select-none bg-neutral-100 text-neutral-100"
                            >
                              000%
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="text-xs border-y border-neutral-300 py-2 transition-colors duration-300"
                      >
                        <td
                          class="pr-4"
                        >
                          <div
                            class="p-2"
                          >
                            <h3
                              class="blink mb-2 w-max select-none bg-neutral-100 text-sm font-bold text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON 
                            </h3>
                             
                            <p
                              class="blink select-none bg-neutral-100 text-sm text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON SKELETON SKELETON 
                            </p>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8"
                          >
                            <span
                              class="blink select-none bg-neutral-100 text-neutral-100"
                            >
                              000 SKELETON
                            </span>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8 flex items-center gap-1"
                          >
                            <span
                              class="blink w-[5ch] select-none bg-neutral-100 text-neutral-100"
                            >
                              000%
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="text-xs border-y border-neutral-300 py-2 transition-colors duration-300"
                      >
                        <td
                          class="pr-4"
                        >
                          <div
                            class="p-2"
                          >
                            <h3
                              class="blink mb-2 w-max select-none bg-neutral-100 text-sm font-bold text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON 
                            </h3>
                             
                            <p
                              class="blink select-none bg-neutral-100 text-sm text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON SKELETON SKELETON 
                            </p>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8"
                          >
                            <span
                              class="blink select-none bg-neutral-100 text-neutral-100"
                            >
                              000 SKELETON
                            </span>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8 flex items-center gap-1"
                          >
                            <span
                              class="blink w-[5ch] select-none bg-neutral-100 text-neutral-100"
                            >
                              000%
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="text-xs border-y border-neutral-300 py-2 transition-colors duration-300"
                      >
                        <td
                          class="pr-4"
                        >
                          <div
                            class="p-2"
                          >
                            <h3
                              class="blink mb-2 w-max select-none bg-neutral-100 text-sm font-bold text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON 
                            </h3>
                             
                            <p
                              class="blink select-none bg-neutral-100 text-sm text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON SKELETON SKELETON 
                            </p>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8"
                          >
                            <span
                              class="blink select-none bg-neutral-100 text-neutral-100"
                            >
                              000 SKELETON
                            </span>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8 flex items-center gap-1"
                          >
                            <span
                              class="blink w-[5ch] select-none bg-neutral-100 text-neutral-100"
                            >
                              000%
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="text-xs border-y border-neutral-300 py-2 transition-colors duration-300"
                      >
                        <td
                          class="pr-4"
                        >
                          <div
                            class="p-2"
                          >
                            <h3
                              class="blink mb-2 w-max select-none bg-neutral-100 text-sm font-bold text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON 
                            </h3>
                             
                            <p
                              class="blink select-none bg-neutral-100 text-sm text-neutral-100"
                            >
                              SKELETON SKELETON SKELETON SKELETON SKELETON 
                            </p>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8"
                          >
                            <span
                              class="blink select-none bg-neutral-100 text-neutral-100"
                            >
                              000 SKELETON
                            </span>
                          </div>
                        </td>
                        <td
                          class="pr-4"
                        >
                          <div
                            class="mt-8 flex items-center gap-1"
                          >
                            <span
                              class="blink w-[5ch] select-none bg-neutral-100 text-neutral-100"
                            >
                              000%
                            </span>
                          </div>
                        </td>
                      </tr>
                      
                    </tbody>
                    <!---->
                  </table>
                </div>
                <!---->
              </div>
              <!---->
               
              <div
                class="flex flex-wrap items-center justify-between gap-y-4"
              >
                <small>
                  Showing 0 themes • Click rows to select themes for response analysis
                </small>
                 
                <div
                  class="flex items-center gap-1"
                >
                  <small>
                    Order:
                  </small>
                   
                  <!---->
                  <button
                    aria-pressed="true"
                    class="text-xs cursor-pointer rounded-md py-0.5 px-1 border border-gray-300 bg-white transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 !bg-neutral-800 text-white hover:bg-neutral-700 svelte-1d0mdzt"
                    data-variant="default"
                    role="button"
                    tabindex="0"
                  >
                    <!---->
                    <!---->
                    High to Low
                    
                    
                    
                  </button>
                  
                  <!---->
                   
                  <!---->
                  <button
                    aria-pressed="false"
                    class="text-xs cursor-pointer rounded-md py-0.5 px-1 border border-gray-300 bg-white transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                    data-variant="default"
                    role="button"
                    tabindex="0"
                  >
                    <!---->
                    <!---->
                    Low to High
                    
                    
                    
                  </button>
                  
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            <!---->
          </section>
          
          <!---->
        </div>
      </div>
      
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;
